<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sound"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_sound" />
        <item
            android:id="@+id/nav_phone"
            android:icon="@drawable/ic_sms_send"
            android:title="@string/menu_phone" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_web"
            android:icon="@drawable/ic_baseline_web_24"
            android:title="@string/menu_web" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/menu_mail" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_baseline_calendar_today_24"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/menu_location" />

        <item
            android:id="@+id/nav_camara"
            android:icon="@drawable/ic_baseline_add_a_photo_24"
            android:title="@string/menu_camara" />

    </group>
</menu>