<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sound">

    <fragment
        android:id="@+id/nav_sound"
        android:name="com.isc.lec08recursos.ui.sound.SoundFragment"
        android:label="@string/menu_sound"
        tools:layout="@layout/fragment_sound" />

    <fragment
        android:id="@+id/nav_phone"
        android:name="com.isc.lec08recursos.ui.phone.PhoneFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.isc.lec08recursos.ui.map.MapFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/nav_web"
        android:name="com.isc.lec08recursos.ui.web.WebFragment"
        android:label="fragment_web"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nav_mail"
        android:name="com.isc.lec08recursos.ui.mail.MailFragment"
        android:label="@string/menu_mail"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.isc.lec08recursos.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.isc.lec08recursos.ui.location.LocationFragment"
        android:label="@string/menu_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/nav_camara"
        android:name="com.isc.lec08recursos.ui.camera.CameraFragment"
        android:label="@string/menu_camara"
        tools:layout="@layout/fragment_camera" />

</navigation>