<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".ui.calendar.CalendarFragment">

    <EditText
        android:id="@+id/et_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tv_titulo"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_ubicacion"
        android:hint="@string/tv_ubicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/bt_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_fecha" />

    <CheckBox
        android:id="@+id/cb_todo_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_todo_dia"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="100"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_hora_ini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/tv_h_ini" />


        <Button
            android:id="@+id/bt_hora_fin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/tv_h_fin" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_crear_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_crear" />
</LinearLayout>