<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sound.SoundFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btGato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btGato"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btLeon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btLeon"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/btPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btPlay"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/btPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btPause"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/btCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btCont"
        style="?android:attr/buttonBarButtonStyle"/>

    <Button
        android:id="@+id/btStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btStop"
        style="?android:attr/buttonBarButtonStyle"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/btCirc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btCirc"
        />
</LinearLayout>